--- a/css/style-small.css
+++ b/css/style-small.css
@@ -357,4 +357,47 @@
          border-bottom-right-radius: 20px;
          margin-top: -2px;
       }
+
+      /* footer */
+   footer {
+         padding: 30px;
+         background-color: #F2F2F2;
+         height: 401px;
+      }
+
+   .footer {
+         display: flex;
+         flex-direction: column;
+         justify-content: space-between;
+         max-width: 100%;
+         width: 263px;
+         height: 401px;
+         margin: 0; 
+      }
+
+   .left-menu, .center-menu, .right-menu {
+         display: flex;
+         flex-direction: column;
+         width: 263px;
+         height: 100%;
+         max-height: 100%;
+         margin: 0;
+         padding: 0;
+      }
+
+   .footer ul {
+         width: 100%;
+         height: 100%;
+         max-height: 100%;
+         margin: 0;
+         padding: 0;
+      }
+
+   .left-menu, .center-menu {
+         margin-bottom: 50px;
+      }
+
+   .center-menu .right-menu {
+         height: 89px;
+      }
 }
