--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ body {
 .hebergements-cards img {
     width: 100%;
     height: 114px;
-    border-radius: 20px 20px 0px 0px; 
+    border-radius: 20px 20px 0 0; 
     padding-bottom: 9px; 
 }
 
@@ -530,4 +530,3 @@ footer ul {
     margin-top: 15px;
     list-style: none;
 }
-
