--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body {
     font-weight: 700;
 }
 
-.neutralStar {
+.card-rating .fa-xs.fa-solid.neutral-star {
     color: var(--main-bg-color)
 }
 
@@ -370,7 +370,7 @@ body {
     text-decoration: none;
 }
 
-/* Populaires  */
+/* Populaires */
 .populaires {
     width: 32%;
 }
@@ -430,7 +430,7 @@ body {
     margin-bottom: 5px;
 }
 
-/* section activites */
+/* activities */
 .activites  {
     margin: 35px 50px;
     padding: 30px;
