--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/****** General ***********/
+/* General */
 * {
     font-family: 'Raleway', sans-serif;
     margin: 0;
@@ -19,12 +19,12 @@ html {
     scroll-behavior: smooth;
 }
 
-/* nav bar */
 .main-container-nav {
     width: 1440px;
     max-width: 100%;
 }
 
+/* nav bar */
 nav {
     display: flex;
     flex-direction: row;
@@ -249,6 +249,21 @@ body {
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
+.card a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+}
+
+.card-body a {
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+}
+
 .card img {
     object-fit: cover;
 }
@@ -302,10 +317,9 @@ body {
 }
 
 .hebergements-cards {
-    position: auto;
     max-width: 100%;
     height: auto;
-  }
+}
 
 .form-1 .hebergements-cards, 
 .form-2 .hebergements-cards {
@@ -320,11 +334,21 @@ body {
 
 .hebergements-cards .card {
     display: flex;
+    flex-direction: column;
     flex-wrap : wrap;
     height: auto;
     width: 250px;
     align-items: center;
     padding-bottom: 15px;  
+}
+
+.hebergements-cards .card a {
+    display: flex;
+    flex-direction: column;
+    flex-wrap : wrap;
+    height: auto;
+    width: 100%;
+    align-items: center;  
 }
 
 .hebergements-cards img {
@@ -357,12 +381,16 @@ body {
     font-weight: 700;
 }
 
+.populaires-title a {
+    text-decoration: none;
+}
+
 .section-more-title {
     display: flex;   
     margin-top: 30px;
     height: 21px;
     font-size: 18px;
-    text-decoration: none;
+    color: #000000;
 }
 
 .section-more-title:hover {
@@ -431,7 +459,7 @@ body {
 }
 
 /* activities */
-.activites  {
+.activites {
     margin: 35px 50px;
     padding: 30px;
     width: auto;
@@ -466,7 +494,7 @@ body {
     cursor: pointer;
 }
 
-.card-body img{
+.card-body img {
     width: 297px;
     max-width: 100%;
     height: 380px;
@@ -499,7 +527,7 @@ body {
     background-color: #F2F2F2;
 }
 
-.footer h3  {
+.footer h3 {
     display: flex;
     margin: 0;
     padding: 0;
@@ -528,5 +556,9 @@ footer ul {
     display: flex;
     max-width: 100%;
     margin-top: 15px;
-    list-style: none;
+}
+
+.footer li:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
