update for rewiew

--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -1,38 +1,38 @@
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media screen and (max-width: 1280px) {
-
-     /* nav */
+    /* General */
      .main-container-nav {
-          width: 1024px;
-          max-width: 100%;
-          height: auto;
+         width: 1024px;
+         max-width: 100%;
+         height: auto;
      }
 
+    /* nav */
      .right {
-          display: flex;
-          width: 244px;
-          height: 35px;
-          padding: 0 50px; 
-          flex-direction: row; 
-          justify-content: space-around;
-          margin-bottom: 45px;
-          gap: 68px;
+         display: flex;
+         width: 244px;
+         height: 35px;
+         padding: 0 50px; 
+         flex-direction: row; 
+         justify-content: space-around;
+         margin-bottom: 45px;
+         gap: 68px;
      }
 
      /* search bar */
      .fa-sharp {
-          width: auto;
-          height: 49px;
-          background-color: #F2F2F2;
-          border-radius: 15px 0 0 15px;
-          color: #000000;
-          display: flex;
-          padding-left: 20px;
-          padding-right: 20px;
-          align-items: center;
-          font-size: 18px;
-      }
+         width: auto;
+         height: 49px;
+         background-color: #F2F2F2;
+         border-radius: 15px 0 0 15px;
+         color: #000000;
+         display: flex;
+         padding-left: 20px;
+         padding-right: 20px;
+         align-items: center;
+         font-size: 18px;
+     }
    
      /* filter */
      .filter {
@@ -45,9 +45,9 @@
      }
 
      .icones .filter h3 {
-        font-size: 18px;
-        margin-bottom: 5px;
-        width: 100%;
+         font-size: 18px;
+         margin-bottom: 5px;
+         width: 100%;
      }
 
      .icones {
@@ -77,18 +77,18 @@
      }
      
      .icones li {
-        width: auto;
-        height: 38px;
-        border: var(--grey-tint-2, #D9D9D9) 2px solid ;
-        border-radius: 50px;
-        align-items: center;
-        padding: 4px 15px;
-        margin-top: 20px;
+         width: auto;
+         height: 38px;
+         border: var(--grey-tint-2, #D9D9D9) 2px solid ;
+         border-radius: 50px;
+         align-items: center;
+         padding: 4px 15px;
+         margin-top: 20px;
      }
      
      .icones h3 {
-        width: 90%;
-        font-size: 16px;
+         width: 90%;
+         font-size: 16px;
      }
     
      /* main */
@@ -104,6 +104,7 @@
     
     .hebergements-cards {
          display: flex;
+         width: 100%;
          flex-wrap: wrap;
          justify-content: space-between;
          gap: 20px;
@@ -118,12 +119,6 @@
          flex-direction: row;
      }
  
-    .form-container {
-         flex-grow: 1;
-         width: 100%;
-         height: auto;
-     }
-
     .populaires {
          width: 100%;
          height: auto;
